--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
+    "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/axios": "^3.0.0",
+    "@nestjs/common": "^10.4.9",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.4.9",
+    "bcryptjs": "^3.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
