chore: session setup-redis

--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/mongoose": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs-modules/ioredis": "^1.0.1",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.4.9",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.4.9",
+    "@nestjs/mongoose": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.1",
     "bcryptjs": "^3.0.2",
+    "ioredis": "^5.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "otp-generator": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -43,7 +47,9 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.10.7",
+    "@types/otp-generator": "^4.0.2",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
