--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "dependencies": {
     "@nestjs-modules/ioredis": "^1.0.1",
     "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^10.4.9",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.4.9",
+    "@nestjs/common": "9.0.11",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "9.0.11",
     "@nestjs/mongoose": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^10.0.0",
     "bcryptjs": "^3.0.2",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.2",
