--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "author": {
-    "name": "Ogbu Ezekiel",
+    "name": "Ogbu Ezekiel-",
     "email": "Zicozydasilva70@gmail.com"
   },
   "private": true,
