--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^10.4.2",
     "axios": "^1.8.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "bcryptjs": "^3.0.2",
     "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.2",
